--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 <body>
     <div id="gameCanvas"></div>
     <button id="resetBtn">Reset</button>
-    <script src="./app.bundle.js"></script>
+    <!-- <script src="./app.bundle.js"></script> -->
+    <script src="./src/tic-tac-toe.js"></script>
 </body>
 </html>
